--- a/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
+++ b/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="rocket.app.view.MortgageController">
-
+<AnchorPane maxHeight="500.0" maxWidth="400.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
+   <children>
+      <AnchorPane layoutX="29.0" layoutY="25.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+         <children>
+            <GridPane prefHeight="350.0" prefWidth="250.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="lblHouseCost" text="House Cost" />
+                  <TextField fx:id="txtHouseCost" GridPane.columnIndex="1" />
+                  <Label fx:id="lblMortgagePayment" text="Mortgage Payment" GridPane.rowIndex="8" />
+                  <Label fx:id="lblCreditScore" text="Credit Score" GridPane.rowIndex="2" />
+                  <Label fx:id="lblTerm" text="Term in Years" GridPane.rowIndex="3" />
+                  <Label fx:id="lblExpenses" text="Monthly Expenses" GridPane.rowIndex="5" />
+                  <Label GridPane.rowIndex="6" />
+                  <ComboBox fx:id="cbTerm" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="lblDownPayment" text="Down Payment" GridPane.rowIndex="1" />
+                  <Label fx:id="lblIncome" text="Yearly Income" GridPane.rowIndex="4" />
+                  <TextField fx:id="txtMonthlyPayment" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                  <TextField fx:id="txtDownPayment" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtCreditScore" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="txtIncome" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="txtExpenses" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label fx:id="lblRate" text="Rate" GridPane.rowIndex="7" />
+                  <TextField fx:id="txtRate" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               </children>
+            </GridPane>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="  Mortgage Payment Calculator" textAlignment="CENTER" AnchorPane.bottomAnchor="410.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="btnPayment" layoutX="96.0" layoutY="309.0" mnemonicParsing="false" onAction="#btnCalculatePayment" text="Calculate" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
